<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RollTwoActivity">

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <ImageView
        android:id="@+id/dice_1_image"
        android:layout_width="133sp"
        android:layout_height="133sp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="35dp"
        android:contentDescription="@string/dice1Description"
        android:padding="5sp"
        app:layout_constraintBottom_toTopOf="@+id/dice_2_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dice1" />

    <ImageView
        android:id="@+id/dice_2_image"
        android:layout_width="133sp"
        android:layout_height="133sp"
        android:layout_marginBottom="75dp"
        android:contentDescription="@string/dice2Description"
        android:padding="5sp"
        app:barrierMargin="5sp"
        app:layout_constraintBottom_toTopOf="@+id/reset_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/dice1" />

</androidx.constraintlayout.widget.ConstraintLayout>